[project]
name = "graph-postgres-manager"
version = "0.1.0"
description = "Unified management for Neo4j and PostgreSQL database connections and transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
